--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">PokemonList</string>
+
+    <string name="about">About</string>
+    <string name="about_message"> Projet Android 4A CFA</string>
+
+    <string name="done">Done</string>
+    <string name="error">Error</string>
+    <string name="retry">Retry</string>
+
+    <string name="pokemon_id">id: %1$d</string>
+    <string name="pokemon_name">name: %1$s</string>
+    <string name="pokemon_height">height: %1$d</string>
+    <string name="pokemon_weight">weight: %1$d</string>
+    <string name="pokemon_base_experience">base experience: %1$d</string>
 </resources>
